# Changelog

## Version 5.5.6

* Fixing #487 Filename corrupted on path change  (thanks to Maddie Davis)
* Fixing #491 Can't open Setting in Chinese upgraded from old version (thanks to 谈天才)
* Fixing #494 frame rate change in 2 pass mode ("Bitrate" mode) results in error for AVC x264 encoder (thanks to Ivan Gorin)

## Version 5.5.5

* Fixing #479 some zho and jpn translations, fixed some typos (thanks to Jing Luo)
* Fixing incorrect PNG profiles for mac toolbox icons

## Version 5.5.4

* Fixing #474 SVT-AV1 single pass would not be set on return from queue (thanks to veldspar)
* Fixing #475 Autocrop can break with index error (thanks to No Name / phanluchoaofficial1152)
* Fixing #477 HDR10+ not extracting with NVEncC encoder, switching to built in copy ability (thanks to Genine-Collin)

## Version 5.5.3

* Fixing missing language options (thanks to RoDanny2021)

## Version 5.5.2

* Adding #469 Romanian translations (thanks to RoDanny2021)
* Fixing #468 Custom resolutions not applying (thanks to GT500org)

## Version 5.5.1

* Fixing #465 Russian translation (thanks to Ta0ba0)
* Fixing #466 AudioProfile could be deleted before fully created, causing runtime error (thanks to Jean-François Roy)
* Fixing to only allow one new profile window at a time

## Version 5.5.0

* Adding decoder option for NVEncC and QSVEncC
* Adding option to disable messages on encoding completion or error
* Adding #266 multiple disposition types for subtitles (thanks to lobofoots)
* Adding #326 support for hwaccel decoding with ffmpeg nvenc (thanks to Jim Leonard)
* Adding #329 Hardware VAAPI encoding support for HEVC, H264, VP9 and MPEG2
* Adding #351 option to disable automatic tab switching (thanks to Wontell)
* Adding #357 QSVencC adapt-ref, adapt-ltr, and adapt-qm parameters (thanks to F.O.R.A.R.T.)
* Adding #368 VCEEncC Pre-Analysis options of sc, ss, activity type, caq, sc qp,lookahead, ltr, paq, taq and motion quality (thanks to Wontell)