@@ -2,8 +2,9 @@
 
 ## Version 5.5.6
 
-* Fixing #487 Filename corrupted on path change  (thanks to Maddie Davis)
+* Fixing #487 Filename corrupted on path change (thanks to Maddie Davis)
 * Fixing #491 Can't open Setting in Chinese upgraded from old version (thanks to 谈天才)
+* Fixing #493 Profiles did not load config for remove hdr, remove metadata or copy chapter toggles (thanks to micron888)
 * Fixing #494 frame rate change in 2 pass mode ("Bitrate" mode) results in error for AVC x264 encoder (thanks to Ivan Gorin)
 
 ## Version 5.5.5
